# vball-net-pytorch

./: .gitignore  GRID_README.md  README.md  README_TRAINING.md  pyproject.toml  run_grid.sh  run_grid_grayscale.sh  run_gru.sh  run_v3c.sh
models/: VballNetGridV1c_seq9_grayscale_20260317.onnx
src/: predict_grid.py  predict_grid_onnx.py  test_grid.py  train_grid.py  train_gru.py  train_v2.py  video_predict.py  video_to_heatmap.py
src/model/: loss.py  vballnet_grid_v1a.py  vballnet_grid_v1b.py  vballnet_grid_v1c.py  vballnet_v1a.py  vballnet_v1b.py  vballnet_v1c.py  vballnet_v2.py  vballnet_v3b.py  vballnet_v3c.py  vballnet_v4.py  vballnetfast_v1.py  vballnetfast_v2.py
src/utils/: convert_v2_to_v1b.py  data_visualizer.py  export_grid_v1b.py  grid_dataset.py  imgLabel.py  prepare_grid_splits.py  tracknet_datasetv2.py
tests/: README.md  conftest.py  test_model_training.py  test_onnx_export.py
