[project]
name = "vball-net-pytorch"
version = "0.1.1"
description = "Volleyball tracking - VballNet is a specialized deep learning framework designed for volleyball tracking, built upon the foundation of TrackNetV4." 
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lion-pytorch>=0.2.3",
    "matplotlib>=3.10.3",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pytest>=9.0.2",
    #    "pyqt6>=6.9.1",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
